@@ -8,6 +8,7 @@ Released ???????? ???, ????
 - Canada updates and test review #533, #536 (cturra)
 - US updates #537 (khawley)
 - doc fixes #549 (canute24)
+- India fixes #553, #554 (canute24, dr-p)
 
 Version 0.11.3.1
 ================
